# netmate-api

./: Cargo.toml  memo.txt
src/: lib.rs  main.rs
src/common/: api_key.rs  birth_year.rs  character_count.rs  cycle.rs  email.rs  fallible.rs  handle.rs  id.rs  key.rs  lang.rs  language.rs  language_group.rs  mod.rs  one_time_token.rs  page.rs  password.rs  rating.rs  region.rs  send_email.rs  tag.rs  token.rs  turnstile.rs  unixtime.rs
src/common/api_key/: expiration.rs  key.rs  mod.rs  refreshed_at.rs
src/common/auth/: mod.rs  password.rs
src/common/consensus/: mod.rs  proposal.rs  stability.rs
src/common/db/: mod.rs
src/common/email/: address.rs  mod.rs  resend.rs  send.rs
src/common/handle/: id.rs  mod.rs  name.rs  share_count.rs
src/common/id/: account_id.rs  mod.rs  tag_id.rs  uuid4.rs  uuid7.rs
src/common/profile/: account_id.rs  birth_year.rs  language.rs  mod.rs  region.rs
src/common/session/: cookie.rs  mod.rs  refresh_pair_expiration.rs  refresh_token.rs  session_expiration.rs  session_id.rs  session_series.rs  value.rs
src/common/tag/: hierarchy.rs  language_group.rs  mod.rs  non_top_tag.rs  non_top_tag_id.rs  proposal_operation.rs  rating_operation.rs  redis_tag_info.rs  relation.rs  relationship.rs  tag_id.rs  tag_info.rs  tag_name.rs  top_tag.rs  top_tag_id.rs
src/common/uuid/: mod.rs  uuid4.rs  uuid7.rs
src/domain/: language.rs  region.rs
src/endpoints/: mod.rs
src/endpoints/api_key/: dsl.rs  endpoint.rs  interpreter.rs
src/endpoints/auth/: mod.rs
src/endpoints/handle/: mod.rs
src/endpoints/tag/: mod.rs
src/helper/: cache.rs  error.rs  middleware.rs  mod.rs  redis.rs  scylla.rs  test.rs  valkey.rs
src/helper/redis/: connection.rs  mod.rs  namespace.rs  namespaces.rs
src/middlewares/: limit.rs  login_session.rs  mod.rs  session.rs  value.rs
src/middlewares/manage_session/: interpreter.rs  middleware.rs  mod.rs
src/middlewares/quota_limit/: dsl.rs  interpreter.rs  middleware.rs  mod.rs
src/middlewares/rate_limit/: dsl.rs  interpreter.rs  middleware.rs  mod.rs  value.rs
src/middlewares/session/: dsl.rs  interpreter.rs  middleware.rs
src/middlewares/start_session/: dsl.rs  middleware.rs
src/routes/: mod.rs
src/routes/accounts/: mod.rs
src/routes/announcements/: domain.rs  get.rs  locale.rs  mod.rs
src/routes/settings/: mod.rs
src/startup/: mod.rs
src/sugar/domain/: language.rs  region.rs
src/translation/: ja.rs  mod.rs  us_en.rs
(+176 files in other folders)
