[package]
name = "netmate-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["json"] }
idna = "1.0.2"
redis = { version = "0.25.4", features = ["tokio-comp"]}
regex = "1.10.6"
scylla = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v7"] }