[package]
name = "netmate-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["json"] }
base64 = "0.22.1"
bb8-redis = "0.16.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
http = "1.1.0"
idna = "1.0.2"
pin-project = "1.1.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
redis = { version = "0.25.4", features = ["tokio-comp"]}
regex = "1.10.6"
resend-rs = "0.9.1"
scylla = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.1"
thiserror = "1.0.61"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4", "v7"] }